/*
Copyright The Kubernetes Authors.

Licensed under the Apache License, Version 2.0 (the "License");
you may not use this file except in compliance with the License.
You may obtain a copy of the License at

    http://www.apache.org/licenses/LICENSE-2.0

Unless required by applicable law or agreed to in writing, software
distributed under the License is distributed on an "AS IS" BASIS,
WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
See the License for the specific language governing permissions and
limitations under the License.
*/


// This file was autogenerated by go-to-protobuf. Do not edit it manually!

syntax = 'proto2';

package github.com.nevercase.k8s_controller_custom_resource.pkg.apis.mysqloperator.v1;

import "github.com/gogo/protobuf/gogoproto/gogo.proto";
import "k8s.io/api/core/v1/generated.proto";
import "k8s.io/apimachinery/pkg/apis/meta/v1/generated.proto";
import "k8s.io/apimachinery/pkg/runtime/generated.proto";
import "k8s.io/apimachinery/pkg/runtime/schema/generated.proto";

// Package-wide variables from generator "generated".
option (gogoproto.marshaler_all) = true;
option (gogoproto.stable_marshaler_all) = true;
option (gogoproto.sizer_all) = true;
option (gogoproto.goproto_stringer_all) = false;
option (gogoproto.stringer_all) = true;
option (gogoproto.unmarshaler_all) = true;
option (gogoproto.goproto_unrecognized_all) = false;
option (gogoproto.goproto_enum_prefix_all) = false;
option (gogoproto.goproto_getters_all) = false;
option go_package = "v1";

message MysqlCore {
  optional MysqlSpec spec = 1 [(gogoproto.customname) = "Spec", (gogoproto.nullable) = false];

  optional MysqlStatus status = 2 [(gogoproto.customname) = "Status", (gogoproto.nullable) = false];
}

// Mysql describes a MysqlOperator resource
message MysqlOperator {
  // ObjectMeta contains the metadata for the particular object, including
  // things like...
  //  - name
  //  - namespace
  //  - self link
  //  - labels
  //  - ... etc ...
  optional k8s.io.apimachinery.pkg.apis.meta.v1.ObjectMeta metadata = 1 [(gogoproto.customname) = "ObjectMeta", (gogoproto.nullable) = false];

  // Spec is the custom resource spec
  optional MysqlOperatorSpec spec = 2 [(gogoproto.customname) = "Spec", (gogoproto.nullable) = false];
}

// MysqlList is a list of MysqlOperator resources
message MysqlOperatorList {
  // +optional
  optional k8s.io.apimachinery.pkg.apis.meta.v1.ListMeta metadata = 1 [(gogoproto.customname) = "ListMeta", (gogoproto.nullable) = false];

  repeated MysqlOperator items = 2 [(gogoproto.customname) = "Items", (gogoproto.nullable) = false];
}

// MysqlSpec is the spec for a MysqlOperator resource
message MysqlOperatorSpec {
  optional MysqlCore masterSpec = 1 [(gogoproto.customname) = "MasterSpec", (gogoproto.nullable) = false];

  optional MysqlCore slaveSpec = 2 [(gogoproto.customname) = "SlaveSpec", (gogoproto.nullable) = false];
}

// MysqlSpec is the sub spec for a MysqlOperator resource
message MysqlSpec {
  // Name of the container specified as a DNS_LABEL.
  // Each container in a pod must have a unique name (DNS_LABEL).
  // Cannot be updated.
  optional string name = 1 [(gogoproto.customname) = "Name", (gogoproto.nullable) = false];

  // Replicas is the number of desired replicas.
  // This is a pointer to distinguish between explicit zero and unspecified.
  // Defaults to 1.
  // More info: https://kubernetes.io/docs/concepts/workloads/controllers/replicationcontroller#what-is-a-replicationcontroller
  // +optional
  optional int32 replicas = 2 [(gogoproto.customname) = "Replicas"];

  // Docker image name.
  // More info: https://kubernetes.io/docs/concepts/containers/images
  // This field is optional to allow higher level config management to default or override
  // container images in workload controllers like Deployments and StatefulSets.
  // +optional
  optional string image = 3 [(gogoproto.customname) = "Image", (gogoproto.nullable) = false];

  // ImagePullSecrets is an optional list of references to secrets in the same namespace to use for pulling any of the images used by this PodSpec.
  // If specified, these secrets will be passed to individual puller implementations for them to use. For example,
  // in the case of docker, only DockerConfig type secrets are honored.
  // More info: https://kubernetes.io/docs/concepts/containers/images#specifying-imagepullsecrets-on-a-pod
  // +optional
  // +patchMergeKey=name
  // +patchStrategy=merge
  repeated k8s.io.api.core.v1.LocalObjectReference imagePullSecrets = 4 [(gogoproto.casttype) = "k8s.io/api/core/v1.LocalObjectReference", (gogoproto.customname) = "ImagePullSecrets", (gogoproto.nullable) = false];

  // List of environment variables to set in the container.
  // Cannot be updated.
  // +optional
  // +patchMergeKey=name
  // +patchStrategy=merge
  repeated k8s.io.api.core.v1.EnvVar env = 5 [(gogoproto.casttype) = "k8s.io/api/core/v1.EnvVar", (gogoproto.customname) = "Env", (gogoproto.nullable) = false];

  // Pod volumes to mount into the container's filesystem.
  // Cannot be updated.
  // +optional
  // +patchMergeKey=mountPath
  // +patchStrategy=merge
  repeated k8s.io.api.core.v1.VolumeMount volumeMounts = 6 [(gogoproto.casttype) = "k8s.io/api/core/v1.VolumeMount", (gogoproto.customname) = "VolumeMounts", (gogoproto.nullable) = false];

  // List of ports to expose from the container. Exposing a port here gives
  // the system additional information about the network connections a
  // container uses, but is primarily informational. Not specifying a port here
  // DOES NOT prevent that port from being exposed. Any port which is
  // listening on the default "0.0.0.0" address inside a container will be
  // accessible from the network.
  // Cannot be updated.
  // +optional
  // +patchMergeKey=containerPort
  // +patchStrategy=merge
  // +listType=map
  // +listMapKey=containerPort
  // +listMapKey=protocol
  repeated k8s.io.api.core.v1.ContainerPort containerPorts = 7 [(gogoproto.casttype) = "k8s.io/api/core/v1.ContainerPort", (gogoproto.customname) = "ContainerPorts", (gogoproto.nullable) = false];

  // The list of ports that are exposed by this service.
  // More info: https://kubernetes.io/docs/concepts/services-networking/service/#virtual-ips-and-service-proxies
  // +patchMergeKey=port
  // +patchStrategy=merge
  // +listType=map
  // +listMapKey=port
  // +listMapKey=protocol
  repeated k8s.io.api.core.v1.ServicePort servicePorts = 8 [(gogoproto.casttype) = "k8s.io/api/core/v1.ServicePort", (gogoproto.customname) = "ServicePorts", (gogoproto.nullable) = false];

  // The role of the server in the clusters.
  // such as: master, slave
  optional string role = 9 [(gogoproto.customname) = "Role", (gogoproto.nullable) = false];

  // The config of the mysql instance.
  optional ServerConfig serverConfig = 10 [(gogoproto.customname) = "Config", (gogoproto.nullable) = false];
}

// MysqlSpecStatus is the status for a MysqlOperator resource
message MysqlStatus {
  // The generation observed by the deployment controller.
  // +optional
  optional int64 observedGeneration = 1 [(gogoproto.customname) = "ObservedGeneration", (gogoproto.nullable) = false];

  // Total number of non-terminated pods targeted by this deployment (their labels match the selector).
  // +optional
  optional int32 replicas = 2 [(gogoproto.customname) = "Replicas", (gogoproto.nullable) = false];

  // Total number of non-terminated pods targeted by this deployment that have the desired template spec.
  // +optional
  optional int32 updatedReplicas = 3 [(gogoproto.customname) = "UpdatedReplicas", (gogoproto.nullable) = false];

  // Total number of ready pods targeted by this deployment.
  // +optional
  optional int32 readyReplicas = 4 [(gogoproto.customname) = "ReadyReplicas", (gogoproto.nullable) = false];

  // Total number of available pods (ready for at least minReadySeconds) targeted by this deployment.
  // +optional
  optional int32 availableReplicas = 5 [(gogoproto.customname) = "AvailableReplicas", (gogoproto.nullable) = false];

  // Total number of unavailable pods targeted by this deployment. This is the total number of
  // pods that are still required for the deployment to have 100% available capacity. They may
  // either be pods that are running but not yet available or pods that still have not been created.
  // +optional
  optional int32 unavailableReplicas = 6 [(gogoproto.customname) = "UnavailableReplicas", (gogoproto.nullable) = false];
}

// ServerConfig is the configuration for a MysqlDeploymentSpec of a MysqlOperator resource
message ServerConfig {
  optional int32 server_id = 1 [(gogoproto.customname) = "ServerId"];

  optional string host = 2 [(gogoproto.customname) = "Host", (gogoproto.nullable) = false];

  optional string user = 3 [(gogoproto.customname) = "User", (gogoproto.nullable) = false];

  optional string password = 4 [(gogoproto.customname) = "Password", (gogoproto.nullable) = false];

  optional string log_file = 5 [(gogoproto.customname) = "LogFile", (gogoproto.nullable) = false];

  optional string log_position = 6 [(gogoproto.customname) = "LogPosition", (gogoproto.nullable) = false];
}

